err/vadm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/testing'...
Compiling './lib/python3.5/site-packages/testing/test_bootstrap.py'...
***   File "./lib/python3.5/site-packages/testing/test_bootstrap.py", line 76
    print txt
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/testing/test_commands.py'...
***   File "./lib/python3.5/site-packages/testing/test_commands.py", line 8
    print "repodir", self.repodir
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/testing/test_sync2.py'...
***   File "./lib/python3.5/site-packages/testing/test_sync2.py", line 13
    print "using tmpdir", cls.tmpdir
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vadm'...
Compiling './lib/python3.5/site-packages/vadm/cmdline.py'...
***   File "./lib/python3.5/site-packages/vadm/cmdline.py", line 16
    print msg.strcontent()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vadm/env.py'...
***   File "./lib/python3.5/site-packages/vadm/env.py", line 21
    print prepend_unixpath('PATH', bindir)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vadm/sync.py'...
***   File "./lib/python3.5/site-packages/vadm/sync.py", line 17
    raise SystemExit, "no valid working copy found at: %s.  Checkout one?" % str(session.hostwc)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vadm-0.6.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
